--- a/03_ExpressMVC/views/index.pug
+++ b/03_ExpressMVC/views/index.pug
@@ -4,7 +4,7 @@ block content
     main.container
         h1.text-center= title
         div.text-right
-            a.add-button(href="add") Agregar tarea
+            a.add-button(href="/add") Agregar tarea
         ul.task-list
             if tasks.length === 0
                 li
