End tasks projects

--- a/07_ExpressMVCMySQL/views/index.pug
+++ b/07_ExpressMVCMySQL/views/index.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
     main.container
-        h1.text-center= title
+        h1.text-center= titulo
         div.text-right
             a.add-button(href="/add") Agregar tarea
         ul.task-list
