--- a/08_ExpressMVCMySQLAuth/public/css/style.css
+++ b/08_ExpressMVCMySQLAuth/public/css/style.css
@@ -50,7 +50,8 @@ label {
   margin-bottom: 0.25rem;
 }
 
-input[type="text"] {
+input[type="text"],
+input[type="password"] {
   width: 100%;
   padding: 0.5rem;
   margin: 0.25rem 0;
