--- a/08_ExpressMVCMySQLAuth/views/index.pug
+++ b/08_ExpressMVCMySQLAuth/views/index.pug
@@ -5,6 +5,7 @@ block content
         h1.text-center= titulo
         div.text-right
             a.add-button(href="/add") Agregar tarea
+            a.delete-button(href="/logout") Cerrar Sesión
         ul.task-list
             if tasks.length === 0
                 li
